2003-11-15  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: 
	* tests/textDisp.test: fixes to one more old Tk [Bug 422411]
	this time concerning inconsistent tab interpretation.
	
2003-11-14  Joe English  <jenglish@users.sourceforge.net>
	* doc/text.n: Fix markup errors.

2003-11-15  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.h: 
	* generic/tkText.c: 
	* generic/tkTextDisp.c: 
	* generic/tkTextWind.c: 
	* generic/tkTextTag.c: 
	* tests/textDisp.test: fixes to another pair of old Tk bugs
	[Bug 220816] (can't scroll horizontally to display all of last
	character), [Bug 842498] (xview confused on window creation),
	and more efficiency in tag creation.  Added new tests.
	
2003-11-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkTextDisp.c (TkTextRedrawTag): Get the correct number
	of lines in the region to be updated.  This fix due to Vince Darley.
	(TkTextUpdateLineMetrics): Return the correct marker value when we
	know the update loop should terminate. [Bug 837300]

2003-11-13  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/event.test:
	* library/text.tcl: fixed the text widget portion of [Bug 542199]
	
2003-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkMenuDraw.c (TkPostSubmenu,AdjustMenuCoords): Rewrote
	to use Tcl_EvalObjv instead of Tcl_VarEval for greater robustness.
	A side benefit is that this should all be faster now too. [Bug 723856]

2003-11-12  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.h: 
	* generic/tkText.c: 
	* generic/tkTextDisp.c: 
	* generic/tkTextIndex.c: 
	* generic/tkTextTag.c: 
	* tests/textTag.test: fixes to two very old Tk bugs [Bug 583286]
	(focus handling with embedded windows), [Bug 220780] (tag
	bindings trigger on window borders), and made two more functions
	static in tkTextDisp.c.
	
	* library/text.tcl: fixed [Tcl Bug 699642] with double/triple-click
	insert positioning.
	